# testsGenerator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: checks.yaml
config/: _env_setup.sh  _run_pytest.sh
resources/: testsGeneratorConcept.drawio
src/: adapters.py  constants.py  errors.py  question.py  question_adapters.py  question_generator.py  question_manager.py
src/data/: questions.json  questions_other.json
tests/: adapters_test.py
