[tool.poetry]
name = "testGenerator"
version = "0.1.0"
license = "MIT"
description = "Tests generator for my students"
authors = ["dmitry-uraev <uraev.dima@yandex.ru>"]
repository = "https://github.com/dmitry-uraev/testsGenerator"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.1"
pylint = "^2.17.3"
flake8 = "^6.0.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
disable_error_code  = [
    'no-redef',
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-)
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
